--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,11 @@
-bin
-.cache
-include/ds.def
-include/ds-parenthesize.str
-include/ds-Permissive.def
-include/ds.generated.pp.af
-include/ds.packed.esv
-include/ds.pp.af
-include/ds.rtg
-include/ds.str
-include/ds.tbl
-include/ds.rtree
-include/ds.ctree
-include/ds.ctree.dep
-include/ds.jar
-include/ds-java.jar
-editor/java/trans
-editor/ds-*.generated.esv
+/bin
+/.cache
+/include
+/editor/java/trans
+/.settings/org.eclipse.jdt.core.prefs
+/utils
+/lib
 syntax/ds*.generated.esv
 syntax/ds.generated.pp
-.settings/org.eclipse.jdt.core.prefs
-utils
-lib/*.generated.str
-lib-refactoring/*.generated.str
-lib
 ds-Outliner.generated.str
-/include
-editor/Common.generated.esv
-editor/DynSem.generated.esv
-editor/Lexical.generated.esv
-editor/Module.generated.esv
-syntax/DynSem.generated.pp
-syntax/DynSem.sdf
-syntax/Module.sdf
-trans/Common.pp.generated.str
-trans/DynSem.pp.generated.str
-trans/Lexical.pp.generated.str
-trans/Module.pp.generated.str
-syntax/ds.sdf
-trans/ds.pp.generated.str
+trans/*generated*
