--- a/dynsem/.project
+++ b/dynsem/.project
@@ -1,46 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>dynsem</name>
-  <comment></comment>
-  <buildSpec>
-    <buildCommand>
-      <name>org.eclipse.jdt.core.javabuilder</name>
-      <arguments>
-      </arguments>
-    </buildCommand>
-    <buildCommand>
-        <name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
-        <triggers>full,incremental,</triggers>
-        <arguments>
-            <dictionary>
-                <key>LaunchConfigHandle</key>
-                <value>&lt;project&gt;/.externalToolBuilders/ds build.main.xml.launch</value>
-            </dictionary>
-        </arguments>
-    </buildCommand>
-    <buildCommand>
-		<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
-		<triggers>clean,</triggers>
-		<arguments>
-			<dictionary>
-				<key>LaunchConfigHandle</key>
-				<value>&lt;project&gt;/.externalToolBuilders/ds clean-project.xml.launch</value>
-			</dictionary>
-		</arguments>
-	</buildCommand>
-    <buildCommand>
-      <name>org.eclipse.pde.ManifestBuilder</name>
-      <arguments>
-      </arguments>
-    </buildCommand>
-    <buildCommand>
-      <name>org.eclipse.pde.SchemaBuilder</name>
-      <arguments>
-      </arguments>
-    </buildCommand>
-  </buildSpec>
-  <natures>
-    <nature>org.eclipse.pde.PluginNature</nature>
-    <nature>org.eclipse.jdt.core.javanature</nature>
-  </natures>
+	<name>dynsem</name>
+	<comment></comment>
+	<projects>
+	</projects>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<triggers>full,incremental,</triggers>
+			<arguments>
+				<dictionary>
+					<key>LaunchConfigHandle</key>
+					<value>&lt;project&gt;/.externalToolBuilders/ds build.main.xml.launch</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<triggers>clean,</triggers>
+			<arguments>
+				<dictionary>
+					<key>LaunchConfigHandle</key>
+					<value>&lt;project&gt;/.externalToolBuilders/ds clean-project.xml.launch</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.pde.ManifestBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.pde.SchemaBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.eclipse.pde.PluginNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.strategoxt.imp.metatooling.nature</nature>
+	</natures>
 </projectDescription>
