--- a/dynsem/build.properties
+++ b/dynsem/build.properties
@@ -1,9 +1,5 @@
-source.. = editor/java/
-output.. = bin/
-bin.includes = META-INF/,\
-               plugin.xml,\
-               include/,\
-               bin/,\
-               lib/,\
-               .
-bin.excludes = trans/
+#Tue Sep 02 13:15:26 EEST 2014
+bin.includes=META-INF/,plugin.xml,include/,icons/,.
+output..=target/classes/
+source..=editor/java/
+bin.excludes=trans/
