--- a/org.metaborg.meta.interpreter.framework/.classpath
+++ b/org.metaborg.meta.interpreter.framework/.classpath
@@ -3,6 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="lib" path="lib/spoofax-sunshine.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/clj-ds-0.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/clj-ds-0.0.4.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/org.metaborg.meta.interpreter.framework/lib/clj-ds-0.0.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
