--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>dynsem</artifactId>
   <packaging>eclipse-plugin</packaging>
-  <description>Spoofax meta-language for specifying dynamic semantics of languages</description>
+  <description>Spoofax DynSem (dynamic semantic specification) language implementation.</description>
   <url>https://github.com/metaborg/dynsem</url>
 
   <parent>
