--- a/org.metaborg.meta.interpreter.framework/pom.xml
+++ b/org.metaborg.meta.interpreter.framework/pom.xml
@@ -31,4 +31,19 @@
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 	</build>
+
+	<developers>
+		<developer>
+			<name>Vlad Vergu</name>
+			<email>v.a.vergu@tudelft.nl</email>
+			<organization>Delft University of Technology</organization>
+			<organizationUrl>http://www.ewi.tudelft.nl/en</organizationUrl>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:git@github.com:metaborg/dynsem.git</connection>
+		<developerConnection>scm:git:git@github.com:metaborg/dynsem.git</developerConnection>
+		<url>https://github.com/metaborg/dynsem</url>
+	</scm>
 </project>
