--- a/dynsem/plugin.xml
+++ b/dynsem/plugin.xml
@@ -1,24 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-   <extension
-         point="org.eclipse.imp.runtime.languageDescription">
-      <language
-            extensions="ds"
-            description="ds"
-            language="ds"
-            derivedFrom="DynamicRoot"
-            validator="dynsem.DsValidator"
-            validatorClass="dynsem.DsValidator"
-      ></language>
-   </extension>
-   <extension
-         id="dynsem.parser"
-         name="ds Parser"
-         point="org.eclipse.imp.runtime.parser">
-      <parser
-            class="dynsem.DsParseController"
-            language="ds">
-      </parser>
-   </extension>    
+  <extension point="org.metaborg.spoofax.eclipse.language">
+    <language esvFile="include/ds.packed.esv" />
+  </extension>
 </plugin>
