--- a/dynsem/.gitignore
+++ b/dynsem/.gitignore
@@ -1,9 +1,15 @@
-/target
 /.cache
-/include
+/bin
 /editor/java/trans
+/editor/*.generated.*
+/include
 /src-gen
-/utils
-syntax/ds*.generated.esv
-syntax/ds.generated.pp
-ds-Outliner.generated.str
+/syntax/*.generated.*
+/target
+/trans/*.pp.generated.str
+/lib/*.generated.*
+
+/.classpath
+/.project
+/.settings
+
