--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>
   <modelVersion>4.0.0</modelVersion>
   <name>ds</name>
   <artifactId>dynsem</artifactId>
@@ -39,10 +42,10 @@
         <groupId>org.metaborg</groupId>
         <artifactId>spoofax-maven-plugin</artifactId>
         <configuration>
-            <format>jar</format>
-            <pardonedLanguages>
-                <language>NameBindingLanguage</language>
-            </pardonedLanguages>
+          <format>jar</format>
+          <pardonedLanguages>
+            <language>NameBindingLanguage</language>
+          </pardonedLanguages>
         </configuration>
         <dependencies>
           <dependency>
