--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -59,4 +59,11 @@
     <developerConnection>scm:git:git@github.com:metaborg/dynsem.git</developerConnection>
     <url>https://github.com/metaborg/dynsem</url>
   </scm>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.metaborg</groupId>
+  		<artifactId>org.metaborg.meta.stratego.semantics</artifactId>
+  		<version>1.5.0-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
