Fix scoping and Maven plugin issues

--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -24,6 +24,7 @@
       <artifactId>org.spoofax.meta.runtime.libraries</artifactId>
       <version>${metaborg-version}</version>
       <type>spoofax-language</type>
+      <scope>${metaborg-meta-lang-scope}</scope>
     </dependency>
 
     <dependency>
@@ -31,21 +32,21 @@
       <artifactId>org.metaborg.meta.lang.template</artifactId>
       <version>${metaborg-version}</version>
       <type>spoofax-language</type>
-      <scope>provided</scope>
+      <scope>${metaborg-meta-lang-scope}</scope>
     </dependency>
     <dependency>
       <groupId>org.metaborg</groupId>
       <artifactId>org.metaborg.meta.lang.nabl</artifactId>
       <version>${metaborg-version}</version>
       <type>spoofax-language</type>
-      <scope>provided</scope>
+      <scope>${metaborg-meta-lang-scope}</scope>
     </dependency>
     <dependency>
       <groupId>org.metaborg</groupId>
       <artifactId>org.metaborg.meta.lang.esv</artifactId>
       <version>${metaborg-version}</version>
       <type>spoofax-language</type>
-      <scope>provided</scope>
+      <scope>${metaborg-meta-lang-scope}</scope>
     </dependency>
   </dependencies>
 
@@ -63,6 +64,8 @@
       <plugin>
         <groupId>org.metaborg</groupId>
         <artifactId>spoofax-maven-plugin</artifactId>
+        <version>${metaborg-version}</version>
+        <extensions>true</extensions>
         <configuration>
           <format>jar</format>
           <pardonedLanguages>
