Adapt to new Eclipse plugin and runtime-libraries

--- a/dynsem.eclipse/plugin.xml
+++ b/dynsem.eclipse/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
   <extension point="org.metaborg.spoofax.eclipse.language">
-    <language esvFile="target/unpacked/include/ds.packed.esv" /> 
+    <language location="target/unpacked/latest" />
+    <language location="target/unpacked/baseline" /> 
   </extension>
 </plugin>
