--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -21,7 +21,7 @@
   <dependencies>
     <dependency>
       <groupId>org.metaborg</groupId>
-      <artifactId>org.spoofax.meta.runtime.libraries</artifactId>
+      <artifactId>org.metaborg.meta.lib.analysis</artifactId>
       <version>${metaborg-version}</version>
       <type>spoofax-language</type>
       <scope>${metaborg-meta-lang-scope}</scope>
