--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -66,5 +66,5 @@
       <version>${metaborg-version}</version>
     </dependency>
   </dependencies>
-  <version>1.5.0.truffle-SNAPSHOT</version>
+  <version>1.5.0-truffle-SNAPSHOT</version>
 </project>
