--- a/org.metaborg.meta.interpreter.framework/pom.xml
+++ b/org.metaborg.meta.interpreter.framework/pom.xml
@@ -57,5 +57,5 @@
 		<developerConnection>scm:git:git@github.com:metaborg/dynsem.git</developerConnection>
 		<url>https://github.com/metaborg/dynsem</url>
 	</scm>
-	<version>1.5.0.truffle-SNAPSHOT</version>
+	<version>1.5.0-truffle-SNAPSHOT</version>
 </project>
