--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -1,51 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>dynsem</artifactId>
-	<name>ds</name>
-	<packaging>spoofax-language</packaging>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>dynsem</artifactId>
+  <name>ds</name>
+  <packaging>spoofax-language</packaging>
 
-	<parent>
-		<groupId>org.metaborg</groupId>
-		<artifactId>parent.language</artifactId>
-		<version>1.5.0-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <groupId>org.metaborg</groupId>
+    <artifactId>parent.language</artifactId>
+    <version>1.5.0-SNAPSHOT</version>
+    <relativePath>../../releng/parent/language</relativePath>
+  </parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.metaborg</groupId>
-			<artifactId>org.metaborg.meta.lib.analysis</artifactId>
-			<version>${metaborg-version}</version>
-			<type>spoofax-language</type>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.meta.lib.analysis</artifactId>
+      <version>${metaborg-version}</version>
+      <type>spoofax-language</type>
+      <scope>${metaborg-meta-lang-scope}</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.metaborg</groupId>
-			<artifactId>org.metaborg.meta.lang.template</artifactId>
-			<version>${metaborg-version}</version>
-			<type>spoofax-language</type>
-		</dependency>
-		<dependency>
-			<groupId>org.metaborg</groupId>
-			<artifactId>org.metaborg.meta.lang.esv</artifactId>
-			<version>${metaborg-version}</version>
-			<type>spoofax-language</type>
-		</dependency>
-	</dependencies>
+    <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.meta.lang.template</artifactId>
+      <version>${metaborg-version}</version>
+      <type>spoofax-language</type>
+      <scope>${metaborg-meta-lang-scope}</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.meta.lang.esv</artifactId>
+      <version>${metaborg-version}</version>
+      <type>spoofax-language</type>
+      <scope>${metaborg-meta-lang-scope}</scope>
+    </dependency>
+  </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.metaborg</groupId>
-				<artifactId>spoofax-maven-plugin</artifactId>
-				<version>${metaborg-version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					<format>jar</format>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.metaborg</groupId>
+        <artifactId>spoofax-maven-plugin</artifactId>
+        <version>${metaborg-version}</version>
+        <extensions>true</extensions>
+        <configuration>
+          <format>jar</format>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
