--- a/org.metaborg.meta.interpreter.framework/pom.xml
+++ b/org.metaborg.meta.interpreter.framework/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
       <groupId>com.oracle.truffle</groupId>
       <artifactId>truffle-api</artifactId>
-      <version>0.9-SNAPSHOT</version>
+      <version>0.9</version>
       <type>jar</type>
     </dependency>
 	</dependencies>
@@ -57,5 +57,4 @@
 		<developerConnection>scm:git:git@github.com:metaborg/dynsem.git</developerConnection>
 		<url>https://github.com/metaborg/dynsem</url>
 	</scm>
-	<version>1.5.0-truffle-SNAPSHOT</version>
 </project>
