--- a/dynsem.eclipse/pom.xml
+++ b/dynsem.eclipse/pom.xml
@@ -9,14 +9,13 @@
 
   <parent>
     <groupId>org.metaborg</groupId>
-    <artifactId>parent.eclipse.language</artifactId>
+    <artifactId>parent.eclipse.language.meta</artifactId>
     <version>1.5.0-SNAPSHOT</version>
-    <relativePath />
+    <relativePath>../../releng/parent/eclipse/language/meta</relativePath>
   </parent>
 
   <properties>
     <lang.unpack.artifactId>dynsem</lang.unpack.artifactId>
-    <lang.baseline.unpack.skip>false</lang.baseline.unpack.skip>
   </properties>
 
   <dependencies>
