--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -1,15 +1,13 @@
 ---
-id: "org.metaborg:dynsem:2.0.0-SNAPSHOT"
+metaborgVersion: "2.0.0-SNAPSHOT"
+id: "org.metaborg:dynsem:${metaborgVersion}"
 name: "ds"
 format: "jar"
 compileDependencies:
-- "org.metaborg:org.metaborg.meta.lang.esv:2.0.0-SNAPSHOT"
-- "org.metaborg:org.metaborg.meta.lib.analysis:2.0.0-SNAPSHOT"
-- "org.metaborg:org.metaborg.meta.lang.template:2.0.0-SNAPSHOT"
+- "org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}"
+- "org.metaborg:org.metaborg.meta.lang.template:${metaborgVersion}"
 runtimeDependencies:
-- "org.metaborg:org.metaborg.meta.lang.esv:2.0.0-SNAPSHOT"
-- "org.metaborg:org.metaborg.meta.lib.analysis:2.0.0-SNAPSHOT"
-- "org.metaborg:org.metaborg.meta.lang.template:2.0.0-SNAPSHOT"
+- "org.metaborg:org.metaborg.meta.lib.analysis:${metaborgVersion}"
 pardonedLanguages:
 - "EditorService"
 - "Stratego-Sugar"
