--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -1,7 +1,7 @@
 ---
-metaborgVersion: 2.0.0-SNAPSHOT
 id: org.metaborg:dynsem:${metaborgVersion}
 name: ds
+metaborgVersion: 2.0.0-SNAPSHOT
 dependencies:
   compile:
   - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
@@ -11,10 +11,9 @@ dependencies:
   java:
   - org.metaborg:org.metaborg.meta.interpreter.framework:${metaborgVersion}
 exports:
-- export:
-    directory: .
-    includes:
-    - lib/JavaCompilationUnit-15.tbl
+- directory: .
+  includes:
+  - lib/JavaCompilationUnit-15.tbl
 pardonedLanguages:
 - EditorService
 - Stratego-Sugar
