Move and bring back Java strategies. Fix attached stratego JAR location.

--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -31,7 +31,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>${basedir}/include/ds.jar</file>
+                  <file>${basedir}/target/metaborg/stratego.jar</file>
                   <type>jar</type>
                   <classifier>transjar</classifier>
                 </artifact>
