Add also the java strategies as a jar artifact

--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -36,6 +36,13 @@
                   <classifier>transjar</classifier>
                 </artifact>
               </artifacts>
+              <artifacts>
+                <artifact>
+                  <file>${basedir}/target/metaborg/stratego-javastrat.jar</file>
+                  <type>jar</type>
+                  <classifier>javajar</classifier>
+                </artifact>
+              </artifacts>
             </configuration>
           </execution>
         </executions>
