Always use pom.xml for building

--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -16,6 +16,8 @@ pardonedLanguages:
 - EditorService
 - Stratego-Sugar
 - SDF
+build:
+ useBuildSystemSpec: true
 language:
   stratego:
     format: jar
