--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -37,21 +37,26 @@
 		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.spoofax.core</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.metaborg</groupId>
 			<artifactId>org.metaborg.meta.interpreter.framework</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>dynsem</artifactId>
-      <classifier>transjar</classifier>
-      <version>2.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>dynsem</artifactId>
-      <classifier>javajar</classifier>
-      <version>2.0.0-SNAPSHOT</version>
-    </dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>dynsem.lib.stratego.javastrat</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>dynsem.lib.stratego.jar</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
