--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -1,16 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.metaborg</groupId>
 	<artifactId>org.metaborg.meta.lang.dynsem.interpreter</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<!-- <version>0.1.0-SNAPSHOT</version> -->
 	<name>DynSem Interpreter</name>
+
+	<parent>
+		<groupId>org.metaborg</groupId>
+		<artifactId>parent.java</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+		<relativePath>../../releng/parent/java</relativePath>
+	</parent>
+
 	<build>
-		<!-- <sourceDirectory>src</sourceDirectory> -->
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -22,7 +27,6 @@
 		<dependency>
 			<groupId>com.github.krukow</groupId>
 			<artifactId>clj-ds</artifactId>
-			<version>0.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.oracle.truffle</groupId>
@@ -55,17 +59,14 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
