--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -4,13 +4,16 @@
 	<artifactId>org.metaborg.meta.lang.dynsem.interpreter</artifactId>
 	<!-- <version>0.1.0-SNAPSHOT</version> -->
 	<name>DynSem Interpreter</name>
-
-	<parent>
+  
+  <groupId>org.metaborg</groupId>
+  <version>2.0.0-SNAPSHOT</version>
+	
+	<!-- <parent>
 		<groupId>org.metaborg</groupId>
 		<artifactId>parent.java</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../../releng/parent/java</relativePath>
-	</parent>
+	</parent> -->
 
 	<build>
 		<plugins>
@@ -29,6 +32,7 @@
 		<dependency>
 			<groupId>com.github.krukow</groupId>
 			<artifactId>clj-ds</artifactId>
+			<version>0.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.oracle.truffle</groupId>
@@ -61,14 +65,17 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
