--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -2,6 +2,8 @@
 id: org.metaborg:dynsem:${metaborgVersion}
 name: ds
 metaborgVersion: 2.0.0-SNAPSHOT
+debug:
+  typesmart: true
 dependencies:
   compile:
   - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
