--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -3,7 +3,7 @@ id: org.metaborg:dynsem:${metaborgVersion}
 name: ds
 metaborgVersion: 2.0.0-SNAPSHOT
 debug:
-  typesmart: true
+  typesmart: false
 dependencies:
   compile:
   - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
