--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
-
-script: travis-build.sh
+before_script:
+  - echo "MAVEN_OPTS='-server -Xms512m -Xmx1024m -Xss16m'" > ~/.mavenrc
+script: ./travis-build.sh
 
 cache:
  directories:
